--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Quiz | Você consegue passar com 100% por este quiz do desenvolvimento de software?</title>
 </head>
 <body>
-  <div class="intro py-3 bg-warning text-center">
+  <div class="intro py-3 bg-danger text-center">
     <div class="container">
-      <h2 class="text-dark display-3 my-4">Quiz</h2>
+      <h2 class="text-white display-3 my-4">Quiz</h2>
     </div>
   </div>
 
-  <div class="quiz py-4 bg-primary">
+  <div class="quiz py-4 bg-secondary">
     <div class="container">
-      <h2 class="my-5 text-warning">Você consegue passar com 100% por este quiz do desenvolvimento de software?</h2>
+      <h2 class="my-5 text-dark">Você consegue passar com 100% por este quiz do desenvolvimento de software?</h2>
 
       <form class="quiz-form text-light">
         <div class="my-5">
@@ -39,13 +39,13 @@
           <div class="form-check my-2 text-white-50">
             <label class="form-check-label">
               <input type="radio" name="inputQuestion2" value="A" checked>
-              ASSMB
+              ASM
             </label>
           </div>
           <div class="form-check my-2 text-white-50">
             <label class="form-check-label">
               <input type="radio" name="inputQuestion2" value="B">
-              ASM
+              ADM
             </label>
           </div>
         </div>
@@ -83,7 +83,7 @@
         </div>
         
         <div class="text-center">
-          <button class="btn bg-warning text-dark">Enviar</button>
+          <button class="btn bg-danger text-white">Enviar</button>
         </div>
       </form>
     </div>
